--- a/xabber/build.gradle
+++ b/xabber/build.gradle
@@ -52,8 +52,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'),
-                    'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
@@ -75,7 +74,7 @@ dependencies {
     compile 'io.realm:realm-android:0.85.0'
     //
     compile 'org.bouncycastle:bcprov-jdk15on:1.49'
-
+    //
     compile "org.igniterealtime.smack:smack-android-extensions:$smackVersion"
     compile "org.igniterealtime.smack:smack-experimental:$smackVersion"
     compile "org.igniterealtime.smack:smack-tcp:$smackVersion"
