--- a/xabber/build.gradle
+++ b/xabber/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     compile 'io.realm:realm-android:0.85.0'
     //
     compile 'org.bouncycastle:bcprov-jdk15on:1.49'
+    compile 'de.measite.minidns:minidns:0.1.7'
     //
     compile "org.igniterealtime.smack:smack-android-extensions:$smackVersion"
     compile "org.igniterealtime.smack:smack-experimental:$smackVersion"
