--- a/xabber/build.gradle
+++ b/xabber/build.gradle
@@ -1,4 +1,10 @@
+
+
 apply plugin: 'com.android.application'
+
+apply plugin: 'com.antfortune.freeline'
+
+
 
 android {
     compileSdkVersion 23
@@ -23,6 +29,11 @@ android {
 
     dexOptions {
         incremental true
+    }
+
+    freeline {
+        hack true
+        productFlavor 'prod'
     }
 
     productFlavors {
@@ -50,9 +61,15 @@ android {
     }
 
     buildTypes {
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+
+        debug {
+            minifyEnabled false
+            shrinkResources false
         }
     }
 }
@@ -79,4 +96,7 @@ dependencies {
     compile "org.igniterealtime.smack:smack-android-extensions:$smackVersion"
     compile "org.igniterealtime.smack:smack-experimental:$smackVersion"
     compile "org.igniterealtime.smack:smack-tcp:$smackVersion"
+
+
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
 }
